hphp/test/slow/parser/php-reserved-name-noreturn-1.php.expectf
Fatal error: Cannot use 'Noreturn' as class name as it is reserved in %s/hphp/test/slow/parser/php-reserved-name-noreturn-1.php on line 6